# wonton

./: .gitignore  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  config.rs  main.rs  state.rs  tests.rs
crates/cli/src/agent/: cipher.rs  client.rs  daemon.rs  mod.rs  protocol.rs  tests.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: aead.rs  dek.rs  identity.rs  kdf.rs  lib.rs  rng.rs  sign.rs
crates/objects/: Cargo.toml
crates/objects/src/: blob.rs  commit.rs  hash.rs  lib.rs  store.rs  tree.rs
crates/server/: Cargo.toml
crates/server/migrations/: 0001_init.sql  0002_orgs.sql  0003_oauth.sql
crates/server/src/: auth.rs  error.rs  handlers.rs  lib.rs  oauth.rs  tests.rs
crates/server/tests/: dependency_direction.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/sync/: Cargo.toml
crates/sync/src/: client.rs  error.rs  lib.rs  pull.rs  push.rs
crates/sync/tests/: integration.rs
crates/vcs/: Cargo.toml
crates/vcs/src/: commit.rs  diff.rs  lib.rs  log.rs  merge.rs  testutil.rs  working_set.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
dashboard/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: api.ts  browse.ts  main.ts  session.ts  style.css  vite-env.d.ts  wasm.ts
