[package]
name = "wonton"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.103"
base64 = "0.22"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
rpassword = "7.5.4"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wonton-crypto = { version = "0.1.0", path = "../crypto" }
wonton-objects = { version = "0.1.0", path = "../objects" }
wonton-shared = { version = "0.1.0", path = "../shared" }
wonton-sync = { version = "0.1.0", path = "../sync" }
wonton-vcs = { version = "0.1.0", path = "../vcs" }
