[package]
name = "wonton"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.103"
base64 = "0.22"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
rpassword = "7.5.4"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml = "0.8"
tracing.workspace = true
uuid = { version = "1.23.4", features = ["v4"] }
tracing-subscriber.workspace = true
wonton-crypto = { version = "0.1.0", path = "../crypto" }
wonton-objects = { version = "0.1.0", path = "../objects" }
wonton-shared = { version = "0.1.0", path = "../shared" }
wonton-sync = { version = "0.1.0", path = "../sync" }
wonton-vcs = { version = "0.1.0", path = "../vcs" }

[dev-dependencies]
# Test-only: stand up a real `wonton-server` (bound to an ephemeral port) so the CLI command
# logic can be driven end-to-end against a genuine backend, mirroring `wonton-sync`'s own
# integration tests. Not in `[dependencies]`, so this doesn't widen the shipped CLI graph.
axum = "0.8.9"
wonton-server = { version = "0.1.0", path = "../server" }
