[package]
name = "wonton-objects"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake2 = "0.10.6"
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid = { version = "1.23.4", features = ["v4", "serde"] }
