[package]
name = "wonton-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
# base64 encodes the opaque binary DTO field (object bodies) on the wire. The server treats it
# as opaque bytes; this client owns the encoding. This is transport plumbing, NOT cryptography.
base64 = "0.22"
wonton-objects = { version = "0.1.0", path = "../objects" }
wonton-shared = { version = "0.1.0", path = "../shared" }

[dev-dependencies]
# Integration tests spin up a REAL `wonton-server` over a bound port and drive it with the
# `SyncClient`. These are TEST-ONLY deps and do NOT violate the production dependency-direction
# rule ("sync moves opaque bytes only, never depends on wonton-crypto"): none of them appears in
# `[dependencies]` above. `wonton-server` itself also does not depend on `wonton-crypto`, so
# nothing leaks through transitively either. `wonton-vcs`/`wonton-crypto` are used only to
# *build* the encrypted commit history the tests push/pull; `ed25519-dalek` only to sign a login
# challenge nonce in-test (the client itself never signs anything).
wonton-server = { version = "0.1.0", path = "../server" }
wonton-vcs = { version = "0.1.0", path = "../vcs" }
wonton-crypto = { version = "0.1.0", path = "../crypto" }
ed25519-dalek = "2"
axum = "0.8.9"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "sqlite"] }
uuid = { version = "1", features = ["v4"] }
